<resources>
    <string name="app_name">Yet Another Shadow Socket</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_server_host">Server Host</string>
    <string name="label_server_port">Server Port</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_cipher">Cipher/Method</string>
    <string name="status_stopped">Disconnected with %s:%d</string>
    <string name="status_started">Connected with conns: 0</string>
    <string name="status_stopping">Disconnecting</string>
    <string name="status_starting">Connecting</string>
    <string name="status_started_with_rate">Connected with conns: %d tx rate: %s rx rate: %s</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="status_ready">READY</string>
    <string name="label_timeout" >Timeout</string>
    <string name="status_current_ip_address">Local IP Address: %s:%d</string>
    <string name="status_started_with_error_msg">Failed to connect due to %s</string>
    <string name="label_server_sni">Server SNI</string>
    <string name="label_doh_url">DNS over HTTPS URL</string>
    <string name="label_dot_host">DNS over TLS Host</string>
    <string name="status_start_failed">Start Failed</string>
    <string name="post_quantum_kyber">Enables post-quantum key-agreements in TLS 1.3 connections</string>
    <string name="button_options">Options</string>
    <string name="title_options">Options</string>
    <string name="label_limit_rate">Limit Rate</string>
</resources>
