<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/serverHostTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_server_host" />

        <EditText
            android:id="@+id/serverHostEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/serverSNITextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_server_sni" />

        <EditText
            android:id="@+id/serverSNIEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/serverPortTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_server_port" />

        <EditText
            android:id="@+id/serverPortEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_username" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/cipherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_cipher" />

        <Spinner
            android:id="@+id/cipherSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/timeoutTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_timeout" />

        <EditText
            android:id="@+id/timeoutEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_ready" />

        <TextView
            android:id="@+id/currentIpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_current_ip_address" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onStartClicked"
            android:text="@string/button_start" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onStopClicked"
            android:text="@string/button_stop" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
